--- a/opportunities.html
+++ b/opportunities.html
@@ -159,7 +159,48 @@
                         </tbody>
                     </table>
                 </div> -->
-                
+
+                <button type="button" style="margin:10px;" class="collapsible">Leaders Needed for a New UofT Club Stars for Scholarly Youth (SSY)</button>
+                <div class="content">
+                    <p>Stars for Scholarly Youth (SSY), is a registered non-profit and University of Calgary student club that <b>provides free, student-run tutoring and mentoring services for underserved and vulnerable youth in grades 5-12.</b> By partnering with local charities and mobilizing university student volunteers they have 
+                        provided much-needed academic and extracurricular support to over 400 underserved students in just two short years. More information about them can be found on our website, <a href="http://starsforscholarlyyouth.com/">starsforscholarlyyouth.com</a> or visiting our Instagram, <a href="https://www.instagram.com/starsfsy/?hl=en">@starsfsy</a>.
+                    </p>
+                    <p>They are looking to expand outside of Calgary and are looking for members <b>interested in starting a chapter at UofT to tackle educational inequity.</b> Chapter leaders will receive one-on-one support (creating partnerships with local organizations, recruiting a team and starting operations), create an impact that 
+                        looks great for future career goals, and be connected to other students passionate about tackling this issue.
+                    </p>
+                    <p>If you are interested please fill out this short interest form: <a href="https://forms.gle/dbMt3FjFxPnQyjCw6">https://forms.gle/dbMt3FjFxPnQyjCw6</a></p>
+                    <p style="margin-bottom:0;">Below are some of the programs that they offer:</p>
+                    <ul>
+                        <li>One-on-One Tutoring - Free 1-on-1 tutoring to youth with a university student adept at teaching the subject they need support with. They are usually offered once per week for an hour, however, this may be adjusted based on the needs of the student.</li>
+                        <li>Mentorship Program - Supports high school (and middle school) students by pairing them with a university mentor to help them better understand the university experience, apply to university or even find their passion. Students meet with their mentors for a minimum of an hour, once a month.</li>
+                        <li>ESL Connect - Newcomer and immigrant students improve their English speaking and writing skills in fun and engaging ways.</li>
+                        <li>Youth Can Code - Students are provided with an introduction to coding and computers.</li>
+                    </ul>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Engineering Careers Symposium</button>
+                <div class="content">
+                    <p>Hello Students,</p>
+                    <p style="margin-bottom:0;">Are you interested in learning more about careers in engineering/science directly from people in the field? From 12PM – 1PM PST on Thursday, February 1, Teck will be hosting a Campus Coffee Engineering Careers Symposium where we will host breakout rooms featuring experts in the following fields:</p>
+                    <ul>
+                        <li>Mining Engineering</li>
+                        <li>Mechanical Engineering</li>
+                        <li>Chemical/Process Engineering</li>
+                        <li>Environmental Engineering/Science</li>
+                        <li>Geological Engineering</li>
+                    </ul>
+                    <p>This is your opportunity to learn what a career in your field might look like and receive answer any questions you may have. We will also be giving out a year’s supply of fresh roasted, organic, Fair-Trade coffee delivered directly to your door to the winner of our trivia.</p>
+                    <p><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=AMBuzvocwkmiT322PIqaUog4j1Ao6RpJpEdyhfI-ZStUMzhaT0ZRODFVSFU0Q0I1UjRFWUZQSjhHRi4u">Register today!</a></p>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Tesla Tech Talk + Networking</button>
+                <div class="content">
+                    <p>Tuesday, January 30</p>
+                    <p>5:30-8:00 PM EST</p>
+                    <p>Myhal Centre - 5th Floor Atrium</p>
+                    <p>This event is intended to connect Tesla engineers and recruiters to University of Toronto’s students and share more on our current openings for co-op and internship opportunities.</p>
+                </div>
+
                 <button type="button" style="margin:10px;" class="collapsible">Transformative Experiential Learning Opportunity</button>
                 <div class="content">
                     <p>Join a global network of multidisciplinary students and faculty investigating complex challenges to accelerate the achievement of the United Nations’ Sustainable Development Goals.</p>
