update pd event photo size

--- a/pd.html
+++ b/pd.html
@@ -162,13 +162,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/fallwiseandcheese.png" alt="wise-and-cheese">
+                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/fallwiseandcheese.png" alt="wise-and-cheese" width ="787" height ="787">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/metrolinx.png" alt="metrolinx-workshop">
+                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/metrolinx.png" alt="metrolinx-workshop" width ="787" height ="787">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/highschoolconference.png" alt="high-school-conference">
+                            <img class="d-block w-100" src="img/pd/2023-2024wisepdevents/highschoolconference.png" alt="high-school-conference" width ="787" height ="787">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#past-events-display" role="button" data-slide="prev">
