--- a/conference.html
+++ b/conference.html
@@ -111,31 +111,38 @@
                         <h4> We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h4>
                     </div>
                 </div>
+                
+                <div class="section-header">
+                    <h3>We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h3>
+                </div>
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                            <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="Photo exec">
+                        </div>
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img2.png" class="img-fluid" alt="Photo 2">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img3.JPG" class="img-fluid" alt="Photo 3">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img4.JPG" class="img-fluid" alt="Photo 4">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img5.JPG" class="img-fluid" alt="Photo 5">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img6.JPG" class="img-fluid" alt="Photo 6">
                         </div>
-                        <div class="col-lg-3 col-md-3">
-                            <img src="img/wiseconference2024/img7.JPG" class="img-fluid" alt="Photo 7">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                            <img src="img/wiseconference2024/img7.jpg" class="img-fluid" alt="Photo 7">
                         </div>
-                        <div class="col-lg-3 col-md-3">
+                        <div class="col-lg-3 col-md-3 text-center mb-4">
                             <img src="img/wiseconference2024/img8.JPG" class="img-fluid" alt="Photo 8">
                         </div>
                         <!-- Add more photo columns as needed -->
@@ -182,32 +189,6 @@
                         </div>
                     </div>
                 </section>
-
-                <div class="section-header">
-                    <h4>Previous Events</h4>
-                </div>
-                <div id="past-events-display" class="carousel slide wow fadeInUp" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#past-events-display" data-slide-to="0" class="active"></li>
-                        <li data-target="#past-events-display" data-slide-to="1"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/outreach/iwd-gala.png" alt="iwd-gala-2019">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/outreach/international-day-of-girl-child.png" alt="international-day-of-girl-child">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#past-events-display" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#past-events-display" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
             </div>
         </section>
                  
