Updated header and conference photo alignment

--- a/conference.html
+++ b/conference.html
@@ -103,47 +103,39 @@
                 <div class="section-header">
                     <h3>Our 2024 National Conference</h3>
                 </div>
-                <div class="row feature-item">
-                    <div class="col-lg-5 wow fadeInUp">
-                        <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="exec-team-photo">
-                    </div>
-                    <div class="col-lg-7 wow fadeInUp pt-5 pt-lg-0">
-                        <h4> We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h4>
-                    </div>
-                </div>
                 
                 <div class="section-header">
                     <h3>We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h3>
                 </div>
 
                 <div class="container">
-                    <div class="row">
+                    <div class="row d-flex align-items-stretch">
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="Photo exec">
+                            <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1">
+                            <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img2.png" class="img-fluid" alt="Photo 2">
+                            <img src="img/wiseconference2024/img2.png" class="img-fluid" alt="Photo 2" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img3.JPG" class="img-fluid" alt="Photo 3">
+                            <img src="img/wiseconference2024/img3.JPG" class="img-fluid" alt="Photo 3" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img4.JPG" class="img-fluid" alt="Photo 4">
+                            <img src="img/wiseconference2024/img4.JPG" class="img-fluid" alt="Photo 4" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img5.JPG" class="img-fluid" alt="Photo 5">
+                            <img src="img/wiseconference2024/img5.JPG" class="img-fluid" alt="Photo 5" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img6.JPG" class="img-fluid" alt="Photo 6">
+                            <img src="img/wiseconference2024/img6.JPG" class="img-fluid" alt="Photo 6" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img7.jpg" class="img-fluid" alt="Photo 7">
+                            <img src="img/wiseconference2024/img7.jpg" class="img-fluid" alt="Photo 7" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img8.JPG" class="img-fluid" alt="Photo 8">
+                            <img src="img/wiseconference2024/img8.JPG" class="img-fluid" alt="Photo 8" style="object-fit: cover;">
                         </div>
                         <!-- Add more photo columns as needed -->
                     </div>
