--- a/events.html
+++ b/events.html
@@ -71,7 +71,12 @@
                             <li><a href="pd.html">Professional Development</a></li>
                         </ul>
                     </li>
-                    <li><a href="https://conference.wiseuoft.org/">Conference</a></li>
+                    <li class="drop-down"><a href="#">Conference</a>
+                        <ul>
+                            <li><a href="https://conference.wiseuoft.org/">Conference Website</a></li>
+                            <li><a href="conference.html">Our 2024 National Conference</a></li>
+                        </ul>
+                    </li>
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li class="drop-down"><a href="#">Stories of WISE</a>
                         <ul>
