update alignment on conference page

--- a/conference.html
+++ b/conference.html
@@ -29,6 +29,9 @@
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- Load jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122092113-1"></script>
     <script>
@@ -101,7 +104,7 @@
             <div class="container">
                 
                 <div class="section-header">
-                    <h4>We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h4>
+                    <h3>We held our twelfth annual conference on January 20th and 21st, 2024! Thank you to everyone who joined us.</h3>
                 </div>
 
                 <div class="container">
