--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
         gtag('config', 'UA-122092113-1');
     </script>
+
+    <style>
+        #header {
+            background-color: rgba(255, 255, 255, 1); /* rgba(255, 255, 255, 1) represents white color with 100% opacity */
+        }
+    </style>
 </head>
 
 <body>
