--- a/index.html
+++ b/index.html
@@ -155,12 +155,14 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-6 col-lg-4 wow fadeInUp">
-                        <div class="box">
-                        <div class="icon" style="background: #fceef3;"><i class="ion-ios-chatboxes-outline" style="color: #ff689b;"></i></div>
-                        <h4 class="title"><a href="pd.html">Professional Development</a></h4>
-                        <p class="description">Our Professional Development initiative hosts interactive networking events for students throughout 
-                            the year with companies in software, IT, science, pharmaceuticals and more!</p>
-                        </div>
+                        <a href="pd.html" style="text-decoration: none; color: inherit;">
+                            <div class="box">
+                                <div class="icon" style="background: #fceef3;"><i class="ion-ios-chatboxes-outline" style="color: #ff689b;"></i></div>
+                                <h4 class="title">Professional Development</h4>
+                                <p class="description">Our Professional Development initiative hosts interactive networking events for students throughout 
+                                    the year with companies in software, IT, science, pharmaceuticals and more!</p>
+                            </div>
+                        </a>
                     </div>
                     
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
