--- a/storiesofwise.html
+++ b/storiesofwise.html
@@ -106,8 +106,16 @@
                         <h4>Our mission is to empower women in STEM fields by sharing their life stories!</h4>
                     </div>
                 </div>
-                
-                <iframe src="https://medium.com/wiseuoft" width="100%" height="800px" frameborder="0"></iframe>
+
+                <div id="retainable-rss-embed"
+                    data-rss="https://medium.com/feed/wiseuoft"
+                    data-maxcols="3"
+                    data-layout="grid"
+                    data-poststyle="inline"
+                    data-readmore="Read the rest"
+                    data-buttonclass="btn btn-primary"
+                    data-offset="-100">
+                </div>
 
                 <div id="past-events-display" class="carousel slide wow fadeInUp" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -186,6 +194,8 @@
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://www.twilik.com/assets/retainable/rss-embed/retainable-rss-embed.js"></script>
+
   
 </body>
 </html>
