update story descriptions

--- a/storiesofwise.html
+++ b/storiesofwise.html
@@ -38,6 +38,46 @@
 
         gtag('config', 'UA-122092113-1');
     </script>
+
+    <style>
+        /* Custom CSS for Medium embed */
+        #retainable-rss-embed .rss-row {
+        background-color: #ffffff; /* Set the background color */
+        padding: 30px; /* Adjust padding as needed */
+        border-radius: 10px; /* Add rounded corners */
+        position: relative;
+        overflow: hidden;
+        margin: 0 10px 40px 10px;
+        box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+        transition: all 0.3s ease-in-out;
+        text-align: center;
+        }
+    
+        #retainable-rss-embed .rss-title {
+        font-size: 30px; 
+        font-weight: 400;
+        margin: 0 0 20px 0;
+        padding: 0;
+        color: #413e66;
+        text-align: center;
+        font-weight: 600;
+        position: relative;
+        padding-top: 30px;
+        font-family: "Open Sans", sans-serif; 
+        }
+    
+        #retainable-rss-embed .rss-content {
+        font-size: 14px; /* Set the font size for content */
+        line-height: 28px; /* Adjust line height as needed */
+        margin-bottom: 0;
+        text-align: center;
+        color: #413e66;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 700;
+        }
+    </style>
+  
+  
 </head>
 
 <body>
