update photo grid and nav bar opacity

--- a/conference.html
+++ b/conference.html
@@ -111,67 +111,31 @@
 
                 <div class="container" id="photo-container">
                     <div class="row">
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/execteamphoto.jpg" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
+                        <div class="col-lg-3 col-md-3 mb-4">
+                            <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img2.png" class="img-fluid" alt="Photo 2" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img3.JPG" class="img-fluid" alt="Photo 3" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img4.JPG" class="img-fluid" alt="Photo 4" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img5.JPG" class="img-fluid" alt="Photo 5" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img6.JPG" class="img-fluid" alt="Photo 6" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
+                        <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img7.jpg" class="img-fluid" alt="Photo 7" style="object-fit: cover;">
                         </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img8.JPG" class="img-fluid" alt="Photo 8" style="object-fit: cover;">
-                        </div>
-                    </div>
-                </div>
 
-                
-                <div class="container">
-                    <div class="row" id="photo-row">
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/execteamphoto.jpg" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img2.png" class="img-fluid" alt="Photo 2" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img3.JPG" class="img-fluid" alt="Photo 3" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img4.JPG" class="img-fluid" alt="Photo 4" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img5.JPG" class="img-fluid" alt="Photo 5" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img6.JPG" class="img-fluid" alt="Photo 6" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img7.jpg" class="img-fluid" alt="Photo 7" style="object-fit: cover;">
-                        </div>
-                        <div class="col-lg-3 col-md-3 text-center mb-4">
-                            <img src="img/wiseconference2024/img8.JPG" class="img-fluid" alt="Photo 8" style="object-fit: cover;">
-                        </div>
-                        <!-- Add more photo columns as needed -->
                     </div>
                 </div>
 
