--- a/storiesofwise.html
+++ b/storiesofwise.html
@@ -119,13 +119,7 @@
                         </ul>
                     </li>
                     <li><a href="opportunities.html">Opportunities</a></li>
-                    <li class="drop-down"><a href="#">Stories of WISE</a>
-                        <ul>
-                            <li><a href="https://www.instagram.com/storiesofwise/" target="_blank">Instagram</a></li>
-                            <li><a href="https://medium.com/wiseuoft" target="_blank">Medium</a></li>
-                            <li><a href="https://www.facebook.com/storiesofWISE/" target="_blank">Facebook</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="storiesofwise.html">Stories of WISE</a></li>
                 </ul>
             </nav><!-- Nav Bar -->
                 
@@ -143,7 +137,7 @@
                 </div>
                 <div class="row feature-item">
                     <div class="col-lg-7 wow fadeInUp pt-5 pt-lg-0">
-                        <h4>Our mission is to empower women in STEM fields by sharing their life stories!</h4>
+                        <h4>Our mission is to empower women in STEM fields by sharing their life stories! Read it on <a href="https://medium.com/feed/wiseuoft">Medium</a></h4>
                     </div>
                 </div>
 
@@ -155,18 +149,6 @@
                     data-readmore="Read the rest"
                     data-buttonclass="btn btn-primary"
                     data-offset="-100">
-                </div>
-
-                <div id="past-events-display" class="carousel slide wow fadeInUp" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#past-events-display" data-slide-to="0" class="active"></li>
-                        <li data-target="#past-events-display" data-slide-to="1"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/initiatives/ind-process.jpg" alt="iwd-gala-2019">
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>     
