--- a/sponsors.html
+++ b/sponsors.html
@@ -78,13 +78,7 @@
                     </li>
                     <li><a href="summer-camp.html">WISE Summer Camp</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
-                    <li class="drop-down"><a href="#">Stories of WISE</a>
-                        <ul>
-                            <li><a href="https://www.instagram.com/storiesofwise/" target="_blank">Instagram</a></li>
-                            <li><a href="https://medium.com/wiseuoft" target="_blank">Medium</a></li>
-                            <li><a href="https://www.facebook.com/storiesofWISE/" target="_blank">Facebook</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="storiesofwise.html">Stories of WISE</a></li>
                 </ul>
             </nav><!-- Nav Bar -->
                 
