right aligning text on homepage

--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container d-flex h-100">
-            <div class="row justify-content-center align-self-center">
-                <div class="col-md-6 intro-img order-md-first order-first"></div>
-                
-                <div class="col-md-6 intro-info order-md-last order-last">
+            <div class="row align-items-center justify-content-end">
+                <div class="col-md-6 intro-info text-right">
                     <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                 </div>
+                <div class="col-md-6 intro-img"></div>
             </div>
         </div>
     </section><!-- #intro -->
