right align text attempt #3

--- a/index.html
+++ b/index.html
@@ -102,14 +102,16 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container d-flex h-100">
-            <div class="row align-items-center justify-content-end">
-                <div class="col-md-6 intro-info text-right">
+            <div class="row justify-content-center align-self-center text-right">
+                <div class="col-md-6 intro-info order-md-first order-last">
                     <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                 </div>
-                <div class="col-md-6 intro-img"></div>
+        
+                <div class="col-md-6 intro-img order-md-last order-first"></div>
             </div>
         </div>
     </section><!-- #intro -->
+
 
     <main id="main">
 
