moving text to far right attempt #7

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container d-flex h-100">
-            <div class="row justify-content-center align-self-center text-right">
+            <div class="row align-self-center justify-content-end text-right">
                 <div class="col-md-6 intro-info order-md-first order-last">
                     <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                 </div>
