Updated opportunities (02/12) and added Winter WISE & Cheese

--- a/events.html
+++ b/events.html
@@ -130,6 +130,24 @@
                 <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
                     <div class="card">
                         <div class="card-header">
+                            <h3>Winter WISE & Cheese</h3>
+                        </div>
+                        <div class="card-block" >
+                            <h4 class="card-title">February 26th, 2024 6:00 - 8:00 pm</h4>
+                            <!-- <img src="img/marketing/Recruitment_Main.png" class="img-fluid" alt="comm-outreach" style="width:60%; border-radius: 8px; margin-top: 25px; margin-bottom: 25px"> -->
+                            <p style="margin-left: 80px; margin-right: 80px;">If you’re looking for a summer internship, PEY, enriching networking experience, or want to discover exciting new career opportunities, join us in GB202 for WISE & Cheese! It will be a distinguished evening 
+                                where you can have face-to-face conversations with reps from leading companies in STEM. We’re hosting OPG, GM, Vector Institute, Qualcomm, Intuit, CIBC, Magna, Mastercard, and more! Catering and refreshments will be provided!
+                            </p>
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-0dtlbFS84IoykQuDv7ntfbqWbOpbY53HHzVHpRv9jo4Qpg/viewform?usp=sf_link" target="_blank" class="btn-current">Register here! Registration deadline is February 23rd, 2024 at 11:59PM</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row flex-items-lg-middle flex-items-lg-center"> 
+                <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <div class="card-header">
                             <h3>Metrolinx Accelerate Your Career</h3>
                         </div>
                         <div class="card-block" >
