update opportunities (02/12) editing issue

--- a/opportunities.html
+++ b/opportunities.html
@@ -162,7 +162,7 @@
                     </table>
                 </div> -->
 
-                button type="button" style="margin:10px;" class="collapsible">Jumpstart Mentorship: Connecting students with Silicon Valley Mentors</button>
+                <button type="button" style="margin:10px;" class="collapsible">Jumpstart Mentorship: Connecting students with Silicon Valley Mentors</button>
                 <div class="content">
                     <p>Jumpstart is a dedicated volunteer organization helping underrepresented groups get their first software engineering job and launch their software engineering career. Their goal is to make the tech industry more 
                         accessible to underrepresented communities regardless of race, gender, sexuality, or education. They match college students from underrepresented backgrounds interested in a career in software engineering with mentors 
@@ -238,7 +238,7 @@
                     <p>We look forward to seeing you at ZSpark!</p>
                 </div>
 
-                <button type="button" style="margin:10px;" class="collapsible">IBCG Advance Conference!</button>
+                <button type="button" style="margin:10px;" class="collapsible">BCG Advance Conference!</button>
                 <div class="content">
                     <p><a href="https://careers.bcg.com/on-campus/programs/bcg-advance">BCG Advance</a> is an inspiring,
                         interactive, invite-only virtual conference that will culminate with an opportunity to interview
