right aligning homepage text

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="container d-flex h-100">
             <div class="row align-self-center justify-content-end text-right">
                 <div class="col-md-6 intro-img order-md-last order-first"> 
-                <div class="col-md-6 intro-info order-md-first order-last"> <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+                <div class="col-md-6 intro-info order-md-first order-last text-right"> <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                 </div>
             </div>
         </div>
