--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container d-flex h-100">
-            <div class="row align-self-center justify-content-end">
-                <div class="col-md-6 order-md-last order-first"> 
-                    <img src="img/wiseconference2024/execteamphoto2.jpg">
-                </div>
-                <div class="col-md-6 order-md-first order-last text-md-right"> <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+            <div class="row align-self-center justify-content-end text-right">
+                <div class="col-md-6 intro-info order-md-first order-last"> <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2> </div>
+                <div class="col-md-6 intro-img order-md-last order-first">
                 </div>
             </div>
         </div>
