--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container d-flex h-100">
-            <div class="row align-self-center justify-content-end text-right">
-                <div class="col-md-6 intro-info order-md-first order-last"> <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2> </div>
-                <div class="col-md-6 intro-img order-md-last order-first">
+            <div class="row justify-content-center align-self-center">
+                <div class="col-md-6 intro-info order-md-first order-last">
+                    <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
                 </div>
-            </div>
+                <div class="col-md-6 intro-img order-md-last order-first"></div>
         </div>
     </section><!-- #intro -->
 
