--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
-        <div class="container d-flex h-100">
+        <div class="container d-flex justify-content-flex-end h-100">
             <div class="row justify-content-center align-self-center">
                 <div class="col-md-6 intro-info order-md-last order-first text-right">
                     <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
