--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
     <!--=====Opening Bar======-->
     <section id="intro" class="clearfix">
         <div class="container h-100" style="display: flex; justify-content: flex-end;">
-            <div class="row justify-content-center align-self-center">
-                <div class="col-md-6 intro-info order-md-last order-first text-right">
-                    <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+            <div class="intro-layer"></div>
+                <div class="row justify-content-center align-self-center">
+                    <div class="col-md-6 intro-info order-md-last order-first text-right">
+                        <h2><span>Women in Science and Engineering</span><br> University of Toronto</h2>
+                    </div>
+                    <div class="col-md-6 intro-img order-md-first order-last"></div>
                 </div>
-                <div class="col-md-6 intro-img order-md-first order-last"></div>
-        </div>
     </section><!-- #intro -->
 
 
