update past events status and uploaded new about team photo

--- a/events.html
+++ b/events.html
@@ -156,7 +156,7 @@
                             <p style="margin-left: 80px; margin-right: 80px;">
                                 Are you a recent graduate or graduating soon? Learn about Metrolinx's new grad rotational program and hear project managers present about their experiences, discuss available projects, and answer questions regarding recruitment!
                             </p>
-                            <a href="https://forms.gle/wySsPjYEHmwLvQzZ7" target="_blank" class="btn-current">Sign up today!</a>
+                            <a href="https://forms.gle/wySsPjYEHmwLvQzZ7" target="_blank" class="btn-current">Registration Closed</a>
                         </div>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                                 <p style="margin-left: 80px; margin-right: 80px;">
                                     Women in Science and Engineering is proud to present our 12th Annual National Conference: Endless Exploration on January 20-21, 2024! We have a lineup of incredible speakers, workshops, panelists, competitions, and company sponsors here to fuel your professional and personal development, widen the reach of your network, and ignite your drive to pursue your passions!
                                 </p>
-                                <a href="https://conference.wiseuoft.org/" target="_blank" class="btn-current">Get your ticket today!</a>
+                                <a href="https://conference.wiseuoft.org/" target="_blank" class="btn-current">Registration Closed</a>
                             </div>
                         </div>
                     </div>
