--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-lg-5 col-md-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="">
+                            <img src="img/aboutteam.jpg" alt="">
                         </div>
                     </div>
                 </div>
