replaced exec photo on conference page

--- a/conference.html
+++ b/conference.html
@@ -106,7 +106,7 @@
                 <div class="container" id="photo-container">
                     <div class="row">
                         <div class="col-lg-3 col-md-3 mb-4">
-                            <img src="img/wiseconference2024/execteamphoto.png" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
+                            <img src="img/wiseconference2024/execteamphoto3.jpg" class="img-fluid" alt="Photo exec" style="object-fit: cover;">
                         </div>
                         <div class="col-lg-3 col-md-3 mb-4">
                             <img src="img/wiseconference2024/img1.png" class="img-fluid" alt="Photo 1" style="object-fit: cover;">
