updated conference link

--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
                     </li>
                     <li class="drop-down"><a href="#">Conference</a>
                         <ul>
-                            <li><a href="https://conference.wiseuoft.org/">Conference Website</a></li>
+                            <li><a href="https://conference.wise.skule.ca/">Conference Website</a></li>
                             <li><a href="conference.html">Our 2024 National Conference</a></li>
                         </ul>
                     </li>
@@ -174,7 +174,7 @@
                                 <p style="margin-left: 80px; margin-right: 80px;">
                                     Women in Science and Engineering is proud to present our 12th Annual National Conference: Endless Exploration on January 20-21, 2024! We have a lineup of incredible speakers, workshops, panelists, competitions, and company sponsors here to fuel your professional and personal development, widen the reach of your network, and ignite your drive to pursue your passions!
                                 </p>
-                                <a href="https://conference.wiseuoft.org/" target="_blank" class="btn-current">Registration Closed</a>
+                                <a href="https://conference.wise.skule.ca/" target="_blank" class="btn-current">Registration Closed</a>
                             </div>
                         </div>
                     </div>
