--- a/opportunities.html
+++ b/opportunities.html
@@ -77,7 +77,7 @@
                     </li>
                     <li class="drop-down"><a href="#">Conference</a>
                         <ul>
-                            <li><a href="https://conference.wiseuoft.org/">Conference Website</a></li>
+                            <li><a href="https://conference.wise.skule.ca/">Conference Website</a></li>
                             <li><a href="conference.html">Our 2024 National Conference</a></li>
                         </ul>
                     </li>
