--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </li>
                     <li class="drop-down"><a href="#">Conference</a>
                         <ul>
-                            <li><a href="https://conference.wiseuoft.org/">Conference Website</a></li>
+                            <li><a href="https://conference.wise.skule.ca/">Conference Website</a></li>
                             <li><a href="conference.html">Our 2024 National Conference</a></li>
                         </ul>
                     </li>
@@ -193,7 +193,7 @@
                     </div>
                     
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
-                        <a href="https://conference.wiseuoft.org/" style="text-decoration: none; color: inherit;">
+                        <a href="https://conference.wise.skule.ca/" style="text-decoration: none; color: inherit;">
                             <div class="box">
                             <div class="icon" style="background: #e1eeff;"><i class="ion-ios-world-outline" style="color: #2282ff;"></i></div>
                             <h4 class="title">National Conference</h4>
