--- a/opportunities.html
+++ b/opportunities.html
@@ -162,15 +162,110 @@
                     </table>
                 </div> -->
 
-                <button type="button" style="margin:10px;" class="collapsible">Jumpstart Mentorship: Connecting students with Silicon Valley Mentors</button>
+                <button type="button" style="margin:10px;" class="collapsible">Success through Balance: An International
+                    Conversation with Avivah Wittenberg-Cox (BA 1981)</button>
                 <div class="content">
-                    <p>Jumpstart is a dedicated volunteer organization helping underrepresented groups get their first software engineering job and launch their software engineering career. Their goal is to make the tech industry more 
-                        accessible to underrepresented communities regardless of race, gender, sexuality, or education. They match college students from underrepresented backgrounds interested in a career in software engineering with mentors 
+                    <p>Wednesday, March 6, 1:00 - 2:00 pm | <a
+                            href="https://clnx.utoronto.ca/home/slevents.htm?eventId=62429">Register on CLNx</a></p>
+                    <p>Join us for an illuminating discussion where gender balance, entrepreneurship, and the power of
+                        curiosity take center stage. Avivah Wittenberg-Cox is an experienced writer, podcaster,
+                        entrepreneur, and much more.</p>
+                    <p>In this session Avivah will share her personal experiences and lessons that led to the creation
+                        of her successful gender balance consultancy business, advising some of the world's most
+                        well-known companies. She has reframed the debate around equity in the workplace and created a
+                        constructive framework with actionable insights for both businesses and individuals. You'll also
+                        learn about the pivotal role curiosity plays in shaping a fulfilling and dynamic career.</p>
+                    <p>This will be an unmissable event that promises to challenge and inspire you, whichever stage of
+                        life you are in.</p>
+                    <img src="img/opportunities/15149_Success Through Balance_Slide.png">
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">A One-Year Law Degree for STEM
+                    Majors</button>
+                <div class="content">
+                    <p>In today's rapidly evolving marketplace, STEM professionals must understand and anticipate the
+                        increasingly complex legal, regulatory, and business issues that impact their work.
+                        This is why STEM majors have chosen to enrol in the <b><a
+                                href="https://mx.technolutions.net/ss/c/gsby7xed_Q9kJKoUKuDGdH13INt40E3t2MyGK0NafwClmcwZeYL7bDtrof9_XFnxnagEP-YSR14hmAsvuvwz3cEIrhqot1Z_W3E-N4U0dOY/43u/TOvkGJs5RHeWzBdeZ98OLQ/h1/yut1S90D-c72YhegKH-3Yv88tO0yek35d9ls7Z0KAn8">
+                                one-year Master of Science in Law</a> (MSL)</b> program at <b>Northwestern Pritzker
+                            School of
+                            Law. We invite you and members of your group to learn about this <a
+                                href="https://mx.technolutions.net/ss/c/gsby7xed_Q9kJKoUKuDGdIjcQek3kq22JakPE1A2F95GTE_mTGls7R9lcUeKG9-ifGBu5XPgyvQ7FCtGMTc4rQ/43u/TOvkGJs5RHeWzBdeZ98OLQ/h2/51TPmlekyBKtBgFBw02ajw-gs8NeKxKAwtSwKKDkajw">one-of-a-kind
+                                degree</a></b> by attending the: <b><a
+                                href="https://mx.technolutions.net/ss/c/VpDhrCrvzjOrNk6AZ3TbHuBkw3bNDLXwA_ijGGgxEXLUrylnXI8yZOn9zHvChROA-2nNDHEgF9DmAEULZ3OpjTe46Jxy7JNKLn53sAmwg6-GWMbIZoEpKCr110GgMkJ8/43u/TOvkGJs5RHeWzBdeZ98OLQ/h3/rBYF2UE35JDEDVhdwTcXPfxQfGJd0hrGvFoMV_3xgdk">Master
+                                of Science in Law (MSL) Open House</a></b><br>
+                        Saturday, March 9th<br>9:30 AM - 12:30 PM CT<br><i>In-person and virtual attendance options are
+                            available</i></p>
+                    <p>The Open House is an <b>excellent opportunity to hear about this unique degree</b> from the MSL
+                        program director, current students, and alums. You can also visit a class that provides a good
+                        example of the many offerings in the <b><a
+                                href="https://mx.technolutions.net/ss/c/gsby7xed_Q9kJKoUKuDGdHfNSleFvCNXYZgq4o9-JGGBZFCQQg0WsJWZ9cFMhuin16z8bWarI_M4xL5bGSwxVkhYb7BK-B9K8ORYGQJ5V-RRhq-W2syHQb4nk1u4H4a_0POFfpGvpffpYRA8Ul9_PA/43u/TOvkGJs5RHeWzBdeZ98OLQ/h4/I1EzvbMb57xmLHDSlU65G9zQH3Sozw8Mzb-WjNTfXLU">MSL
+                                curriculum.</a></b></p>
+                    <p>Another way to learn about the MSL is to <b>schedule an Information Session for your group!</b>
+                        Connect with us
+                        <a
+                            href="https://mx.technolutions.net/ss/c/gOXvwOH2IZGQRaSAdkj1oa_IGLsL656tE-s7CoHHJeZq1K_dQ2QmYpc-RNcduRDIkg9aCCmXZZM_86obddh8iy2XsOCp_iyRPNchBTYlfPxJ6TiG-JrLvf9CuzQIh7qk/43u/TOvkGJs5RHeWzBdeZ98OLQ/h5/gjryDqyuGIvTEs15-tAWavdXw3xLP5zHzGQYWWjFQds">here</a>
+                        to tell us how we can tailor it to your needs and interests. Students also have the option to <a
+                            href="https://mx.technolutions.net/ss/c/VpDhrCrvzjOrNk6AZ3TbHuBkw3bNDLXwA_ijGGgxEXLUrylnXI8yZOn9zHvChROAJehBXBzOB3UDaUE2qcFd_w/43u/TOvkGJs5RHeWzBdeZ98OLQ/h6/nyvsN9qhrZKAPSq4NWvJUD5G3jYQ3dahq5--tr6KjCA">complete
+                            this form</a>, and an admissions team member will be in touch.
+                    </p>
+                    <p></p>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Success through Balance: An International
+                    Conversation with Avivah Wittenberg-Cox (BA 1981)</button>
+                <div class="content">
+                    <p>The <a href="https://sgdo.utoronto.ca/">Sexual & Gender Diversity Office (SGDO)</a>, <a
+                            href="https://studentlife.utoronto.ca/department/career-exploration-education/">Career
+                            Exploration & Education (CxED)</a>, and <a href="https://alumni.utoronto.ca/">Alumni
+                            Relations</a>
+                        are proud to present the <b>Student & Alumni Career Networking Night</b> for 2SLGBTQ+ students
+                        and alumni. Please feel free to forward this email to your network or share the information via
+                        any other channels. If you’re a 2SLGBTQ+ student with questions about life as a 2SLGBTQ+ grad,
+                        come ask Queers with careers.
+                        Get their advice and start building your U of T community of supportive alumni.</p>
+                    <p style="margin-bottom:0;">Your networking night includes:</p>
+                    <ul>
+                        <li>Hors d’oeuvres and non-alcoholic beverages</li>
+                        <li>A professional headshot photo booth</li>
+                        <li>Meet and greet icebreakers</li>
+                    </ul>
+                    <b>
+                        <p style="margin-bottom:0;">Event details:</p>
+                        <li>
+                            <ul>Thursday, February 29, 2024</ul>
+                            <ul>5:30–7:30 p.m. EST</ul>
+                            <ul>St. George Campus</ul>
+                            <ul>Free</ul>
+                            <ul>Evening hosted by Gabrielle Zilkha – U of T alum, filmmaker and comedian.</ul>
+                        </li>
+                    </b>
+                </div>
+
+
+                <button type="button" style="margin:10px;" class="collapsible">Jumpstart Mentorship: Connecting students
+                    with Silicon Valley Mentors</button>
+                <div class="content">
+                    <p>Jumpstart is a dedicated volunteer organization helping underrepresented groups get their first
+                        software engineering job and launch their software engineering career. Their goal is to make the
+                        tech industry more
+                        accessible to underrepresented communities regardless of race, gender, sexuality, or education.
+                        They match college students from underrepresented backgrounds interested in a career in software
+                        engineering with mentors
                         from companies such as Amazon, Microsoft, Uber, and more.</p>
-                    <p>They are excited to share an upcoming 10-week program, which will run from February 22nd to April 19th. This free program is designed to provide comprehensive support to students during the software engineering job 
-                        application process. They will pair students with vetted and experienced mentors and cover the technical and non-technical aspects of the job application process to help students land their dream job.</p>
-                    <p><b>To apply or learn more about our program, interested students can visit our website at <a href="https://jumpstartmentoring.com/">https://jumpstartmentoring.com/</a> and apply here: <a href="https://forms.gle/c3fgrWRTBMGEcCsC6">https://forms.gle/c3fgrWRTBMGEcCsC6</a></b></p>
-                    <p>If you have any questions, please don’t hesitate to reach out to them directly at <a href="mailto: jumpstartmentorship@gmail.com">jumpstartmentorship@gmail.com</a>.</p>
+                    <p>They are excited to share an upcoming 10-week program, which will run from February 22nd to April
+                        19th. This free program is designed to provide comprehensive support to students during the
+                        software engineering job
+                        application process. They will pair students with vetted and experienced mentors and cover the
+                        technical and non-technical aspects of the job application process to help students land their
+                        dream job.</p>
+                    <p><b>To apply or learn more about our program, interested students can visit our website at <a
+                                href="https://jumpstartmentoring.com/">https://jumpstartmentoring.com/</a> and apply
+                            here: <a
+                                href="https://forms.gle/c3fgrWRTBMGEcCsC6">https://forms.gle/c3fgrWRTBMGEcCsC6</a></b>
+                    </p>
+                    <p>If you have any questions, please don’t hesitate to reach out to them directly at <a
+                            href="mailto: jumpstartmentorship@gmail.com">jumpstartmentorship@gmail.com</a>.</p>
 
                     <p>This one-week, winter 2024 conference is for sophomore/second-year women currently enrolled at a
                         college or university in the U.S. or Canada, and graduating between December 2025 – July 2026.
@@ -231,8 +326,10 @@
                             structure your approach, communicate your ideas, and
                             demonstrate your problem-solving skills.</li>
                     </ul>
-                    <p><b>To register for this series, please visit</b><a href="https://app.joinhandshake.com/emp/events/1474711">ZSpark: Lighting Up Your Consulting 
-                        Future Part 1: Consulting 101</a> and <b>RSVP by February 16, 2024.</b> Only participants who
+                    <p><b>To register for this series, please visit</b><a
+                            href="https://app.joinhandshake.com/emp/events/1474711">ZSpark: Lighting Up Your Consulting
+                            Future Part 1: Consulting 101</a> and <b>RSVP by February 16, 2024.</b> Only participants
+                        who
                         attend Part 1 will be invited to attend Part 2 and Part 3. Spaces are limited, so register early
                         to secure your spot.</p>
                     <p>We look forward to seeing you at ZSpark!</p>
@@ -630,7 +727,7 @@
                     }
                 </script>
 
-                <p class="align"><i>Last updated: February 12, 2024</i></p>
+                <p class="align"><i>Last updated: February 27, 2024</i></p>
             </div>
         </section>
     </main>
